# kinpri-countdown-bot

./: main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
tests/: test_is_hours_countdown.py  test_main.py  test_twitter_kinpri_countdown_bot.py
twitter_kinpri_countdown_bot/: main.py
twitter_kinpri_countdown_bot/img/: kinpri-countdown-0.xcf  kinpri-countdown.xcf
