[tool.poetry]
name = "twitter-kinpri-countdown-bot"
version = "0.1.0"
description = "Twitter bot @kinpricountdown for countdowning the date of \"KING OF PRISM\""
authors = ["sakuramochi <sakuramochi.mochi.0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tweepy = "^3.7"
pyyaml = "^3.13"
python-dateutil = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
